--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,10 @@ html {
 
   /* margin-bottom: auto; */
 }
+.input {
+  border: 1px solid gold;
+  font-size: 1rem;
+}
 .contact-button {
   background: gold;
   margin-left: auto;
@@ -39,12 +43,12 @@ html {
   width: 200px;
 }
 
-.edu {
+.section-header {
   height: fit-content;
   border-bottom: 1px goldenrod solid;
   font-size: 3rem;
 }
-.edu-content {
+.sub-content {
   margin: 0px auto;
   padding: 50px 0px 50px 0px;
   border-bottom: 1px ridge gold;
