--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,9 @@ html {
 #navbar-example2 {
   border-bottom: 1px goldenrod solid;
 }
+.bg-black {
+  background: black;
+}
 .nav-item-style {
   /* font-size: 2rem; */
   color: gold;
@@ -61,25 +64,25 @@ html {
   color: gold;
 }
 .project-tags {
-  margin-top: 100px;
+  margin-top: 50px;
   display: flex;
   flex-direction: row;
   gap: 30px;
 }
 .project-tags p {
-  background: gold;
-  color: black;
+  /* background: ; */
+  color: gold;
   font-size: large;
   font-weight: normal;
-  /* border: 2px solid rgb(27, 19, 9); */
-  /* border-radius: 50px; */
+  border: 1px solid goldenrod;
+  /* border-radius: 50px;
   /* padding: 10px 10px; */
 }
 .project-tags p:hover {
   transition: 0.1s ease-in;
-  background: black;
-  color: gold;
-  border-color: gold;
+  background: gold;
+  color: black;
+  border-color: black;
 }
 body {
   background-color: black;
