--- a/styles/style.css
+++ b/styles/style.css
@@ -101,11 +101,15 @@ body {
   /* overflow-y: scroll; */
 }
 img {
-  height: 480px;
+  height: 320px;
   object-fit: fill;
 }
 .carousel-div {
   width: 320px;
+}
+.card-text {
+  font-weight: 700;
+  font-size: larger;
 }
 @media screen and (min-width: 900px) {
   .carousel-div {
